<resources>
    <string name="app_name">For foodies by foodies</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login">Login</string>
    <string name="signUp">SignUp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="forget_password">Forget Password</string>
    <string name="create_a_new_account">Create a new Account!</string>
    <string name="already_have_an_account">Already have an account!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_drawer_open">open drawer</string>
    <string name="main_drawer_close">close drawer</string>
    <string name="restaurants">restaurants</string>
    <string name="view">View</string>
    <string name="view_review">View Review</string>
    <string name="add_review">Add Review</string>
    <string name="reservation">Reservation</string>
    <string name="title_activity_reservation">Reservation</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user_image">user image</string>
    <string name="title_activity_reviews">ReviewsActivity</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="add_your_rating">Add your rating!</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="no_vegetarian">No-Vegetarian</string>
    <string name="user_name">User Name</string>
    <string name="submit">Submit</string>
    <string name="submit_changes">Submit changes</string>
    <string name="food_consumer">Food Connoisseur</string>
    <string name="_3_5">3/5</string>
    <string name="create_an_account">Create an account!</string>
    <string name="admin">Admin</string>
    <string name="critic">Critic</string>
    <string name="logo">TODO</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="channels">Channels</string>
    <string name="send">Send</string>
    <string name="type_message">Type message</string>
    <string name="for_adding_chat_topics">for adding chat topics</string>
    <string name="restaurant">Restaurants</string>
    <string name="profile">Profile</string>
    <string name="street_food">Street Food</string>
    <string name="chat_forum">Chat Forum</string>
    <string name="add_critic">Add Critic</string>
    <string name="for_adding_new_restaurant">For adding new restaurant</string>
    <string name="for_adding_street_food_stalls">For adding street food stalls</string>
    <string name="lbl_forgot_password">Forget Password</string>
    <string name="forgot_password_msg">To reset password, enter your emial, press the button anc check mail to follow instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="logout">Logout</string>

</resources>