<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/restaurantFragment_id"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/restaurant" />
        <item
            android:id="@+id/profileFragment_id"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/streetFoodFragment_id"
            android:icon="@drawable/ic_fastfood"
            android:title="@string/street_food" />
        <item
            android:id="@+id/channelFragment_id"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat_forum" />
        <item
            android:id="@+id/logout_id"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
    <group android:visible="false" android:id="@+id/second_group">
        <item
            android:id="@+id/addCritics_id"
            android:icon="@drawable/ic_person_add"
            android:title="@string/add_critic" />
    </group>
</menu>